<resources>
    <string name="app_name">Coffee Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample">пример</string>
    <string name="e_mail">e-mail</string>
    <string name="password">Пароль</string>
    <string name="mail_example_com">mail@example.com</string>
    <string name="log_in">Войти</string>
    <string name="register">Регистрация</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="pay">Оплатить</string>
    <string name="sample_msg">Время ожидания заказа N минут!</string>
    <string name="on_map">На карте</string>
    <string name="menu">Меню</string>
    <string name="shop_name">shop name</string>
    <string name="_1_km">1 km</string>
    <string name="_1">1</string>
    <string name="rub">" руб"</string>
    <string name="sample_coffee">Sample Coffee</string>
    <string name="go_pay">Перейти к оплате</string>
    <string name="msg_15">Время ожидания заказа 15 минут.\nСпасибо, что выбрали нас!</string>
    <string name="see_on_map">На карте</string>
</resources>